tests/ui/feature-gates/feature-gate-derive-coerce-pointee.stderr
error[E0658]: use of unstable library feature `derive_coerce_pointee`
  --> $DIR/feature-gate-derive-coerce-pointee.rs:3:10
   |
LL | #[derive(CoercePointee)]
   |          ^^^^^^^^^^^^^
   |
   = note: see issue #123430 <https://github.com/rust-lang/rust/issues/123430> for more information
   = help: add `#![feature(derive_coerce_pointee)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `derive_coerce_pointee`
  --> $DIR/feature-gate-derive-coerce-pointee.rs:1:5
   |
LL | use std::marker::CoercePointee;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123430 <https://github.com/rust-lang/rust/issues/123430> for more information
   = help: add `#![feature(derive_coerce_pointee)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
